# dlnamodule

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  build.sh  build_arm64.sh  build_armv7.sh  build_win64.ps1
cmake/: GetGitRevisionDescription.cmake
contrib/slog/: slog.h
src/: CMakeLists.txt  DLNAConfig.h.in  DLNAInterface.cpp  DLNAModule.cpp  DLNAModule.def  DLNAModule.h  URLHandler.cpp  URLHandler.h  UpnpCommand.cpp  UpnpCommand.h  logger.cpp  logger.h
